--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,5 +1,6 @@
-- name: RobShop Setup Playbook
+- name: RoboShop Setup Playbook
   hosts: "{{ HOST }}"
+  become: yes
   roles:
     - "{{ ROLE_NAME }}"
 
