--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: "Searching for a String"
   lineinfile:
     path: /var/log/mysqld.log
-    line: '*A temporary password*'
+    line: '.*A temporary password.*'
     state: present
   check_mode: yes
   register: presence
