--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -34,6 +34,8 @@
 
 - name: Reset the password
   mysql_db:
+    login_user: root
+    login_password: "{{DEFAULT_PASSWORD.stdout}}"
     state: import
     name: all
     target: /tmp/password-reset.sql
