--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -39,6 +39,21 @@
     - name: Reset the password
       ansible.builtin.shell: mysql --connect-expired-password -u root -p{{DEFAULT_PASSWORD.stdout}} </tmp/password-reset.sql
 
+- name: Download & Extract MySQL Content
+  ansible.builtin.unarchive:
+    src: https://github.com/roboshop-devops-project/mysql/archive/main.zip
+    dest: /tmp
+    remote_src: yes
+
+- name: Load Schema
+  mysql_db:
+    login_user: root
+    login_password: RoboShop@1
+    state: import
+    name: all
+    target: /tmp/mysql-main/shipping.sql
+
+
 
 
 
