--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -8,42 +8,18 @@
       - gcc-c++
     state: installed
 
-- name: Add a Application user
-  ansible.builtin.user:
-    name: roboshop
-
-- name: Download & Extract {{COMPONENT}} Content
-  ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
-    dest: /tmp
-    remote_src: yes
-
-- name: Clean old {{COMPONENT}} Content
-  ansible.builtin.file:
-    path: /home/roboshop/{{COMPONENT}}
-    state: absent
-
-- name: Copy {{COMPONENT}} Code
-  ansible.builtin.copy:
-    src: /tmp/{{COMPONENT}}-main/
-    dest: /home/roboshop/{{COMPONENT}}/
-    remote_src: yes
-  become_user: roboshop
+- name: Download from Github
+  import_role:
+    name: common
+    tasks_from: downlaod-from-github
 
 - name: Install NodeJS Dependencies
   community.general.npm:
     path: /home/roboshop/{{COMPONENT}}
 
-- name: Setup SystemD Config File
-  ansible.builtin.template:
-    src: systemd.service
-    dest: /etc/systemd/system/{{COMPONENT}}.service
-
-- name: Start {{COMPONENT}} Service
-  ansible.builtin.systemd:
-    name: "{{COMPONENT}}"
-    state: restarted
-    enabled: yes
-    daemon_reload: yes
+- name: SystemD Setup
+  import_role:
+    name: common
+    tasks_from: systemd
 
 
