--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -7,7 +7,7 @@
 - name: Download from Github
   import_role:
     name: common
-    tasks_from: downlaod-from-github
+    tasks_from: download-from-github
 
 - name: Compile Java code
   ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
