--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -16,9 +16,17 @@
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
-- name: Print
-  debug:
-    msg: "{{APPUSER}}"
+- name: Update Application Configuration - User Infor
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
+    regexp: '^uid='
+    line: uid = {{APPUSER.uid}}
+
+- name: Update Application Configuration - Group Infor
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
+    regexp: '^gid='
+    line: uid = {{APPUSER.group}}
 
 - name: SystemD Setup
   import_role:
