--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -22,7 +22,7 @@
     regexp: "{{item.string}}"
     line: uid = {{item.value}}
   loop:
-    - { string: "^uid=", value: {{APPUSER.uid}} }
+    - { string: "^uid=", value: "{{APPUSER.uid}}" }
 
 
 - name: SystemD Setup
