--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -23,6 +23,7 @@
     line: uid = {{item.value}}
   loop:
     - { string: "^uid=", value: "{{APPUSER.uid}}" }
+    - { string: "^gid=", value: "{{APPUSER.group}}" }
 
 
 - name: SystemD Setup
