--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -16,7 +16,7 @@
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
-- name: Update Application Configuration - User Infor
+- name: Update Application Configuration
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
     regexp: "{{item.string}}"
@@ -25,11 +25,8 @@
     - { string: "^uid=", value: "{{APPUSER.uid}}" }
     - { string: "^gid=", value: "{{APPUSER.group}}" }
 
-
 - name: SystemD Setup
   import_role:
     name: common
     tasks_from: systemd
-
-
 
