--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -4,6 +4,9 @@
     dest: /etc/systemd/system/{{COMPONENT}}.service
   notify: Reload
 
+- name: Flush handlers
+  meta: flush_handlers
+
 - name: Start {{COMPONENT}} Service
   ansible.builtin.systemd:
     name: "{{COMPONENT}}"
