--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -6,6 +6,13 @@
       - python3-devel
     state: installed
 
+- name: Install Python Modules
+  pip:
+    name:
+      - botocore
+      - boto3
+    executable: pip3
+
 - name: Download from Github
   import_role:
     name: common
