--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -22,7 +22,8 @@
     url: https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem
     dest: /home/roboshop/{{COMPONENT}}/rds-combined-ca-bundle.pem
   when: DBTYPE == "DOCUMENTDB"
-
+  become_user: roboshop
+  
 - name: SystemD Setup
   import_role:
     name: common
