--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -6,7 +6,7 @@ Environment={{DBTYPE}}=true
 {% if DBTYPE == "MONGO" %}
 Environment=MONGO_URL="mongodb://mongodb-{{ENV}}.roboshop.internal:27017/catalogue"
 {% else %}
-Environment=MONGO_URL="mongodb://admin1:RoboShop1@{{DOCDB_ENDPOINT}}:27017/catalogue?tls=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false"
+Environment=MONGO_URL="mongodb://{{SECRET.DOCDB_USERNAME}}:{{SECRET.DOCDB_PASSWORD}}@{{DOCDB_ENDPOINT}}:27017/catalogue?tls=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false"
 {% endif %}
 ExecStart=/bin/node /home/roboshop/catalogue/server.js
 SyslogIdentifier=catalogue
