--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -3,6 +3,11 @@
     src: prometheus.yml
     dest: /opt/prometheus/prometheus.yml
 
+- name: Copy Prometheus Record rules
+  ansible.builtin.template:
+    src: record-rules.yml
+    dest: /opt/prometheus/record-rules.yml
+
 - name: Restart Prometheus
   ansible.builtin.systemd:
     name: prometheus
