--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -8,6 +8,11 @@
     src: record-rules.yml
     dest: /opt/prometheus/record-rules.yml
 
+- name: Copy Prometheus Alert rules
+  ansible.builtin.template:
+    src: alert-rules.yml
+    dest: /opt/prometheus/alert-rules.yml
+
 - name: Restart Prometheus
   ansible.builtin.systemd:
     name: prometheus
