--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -35,3 +35,9 @@
     name: alertmanager
     state: restarted
 
+- name: Wait for Alertmanager port
+  wait_for:
+    port: 9093
+    host: 0.0.0.0
+    delay: 20
+    timeout: 30
