--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -20,5 +20,6 @@ rule_files:
 # Here it's Prometheus itself.
 scrape_configs:
   - job_name: "ec2-nodes"
-    static_configs:
-      - targets: ["172.31.85.71:9100"]
+    ec2_sd_configs:
+      - region: eu-west-1
+        port: 9100
