--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -21,5 +21,5 @@ rule_files:
 scrape_configs:
   - job_name: "ec2-nodes"
     ec2_sd_configs:
-      - region: eu-west-1
+      - region: us-east-1
         port: 9100
