--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -20,4 +20,10 @@
     tasks_from: systemd
 
 
+- name: Setup Prometheus Node Exporter
+  import_role:
+    name: prometheus
+    tasks_from: nodeexporter.yml
+
+
 
