--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -36,3 +36,7 @@
     name: prometheus
     tasks_from: nodeexporter.yml
 
+- name: Setup Filebeat
+  import_role:
+    name: elk
+    tasks_from: filebeat.yml
