--- a/roles/elk/tasks/filebeat.yml
+++ b/roles/elk/tasks/filebeat.yml
@@ -8,6 +8,11 @@
     name: filebeat
     state: installed
 
+- name: Update Filebeat Config
+  ansible.builtin.template:
+    src: filebeat.yml
+    dest: /etc/filebeat/filebeat.yml
+
 - name: Start Filebeat
   ansible.builtin.systemd:
     name: filebeat
