--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -6,7 +6,7 @@ input {
 
 filter {
   grok {
-    match => { "message" => "%{IP:source_ip}%{SPACE}%{HTTPDATE:date}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_extention}%{SPACE}HTTP/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:request_size:int}%{SPACE}(%{URI:http_uri}|-)%{SPACE}%{QS:user_agent}%{SPACE}%{NUMBER:response_time:float}" }
+    match => { "message" => "%{IP:source_ip}%{SPACE}%{HTTPDATE:date}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_extension}%{SPACE}HTTP/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:request_size:int}%{SPACE}(%{URI:http_uri}|-)%{SPACE}%{QS:user_agent}%{SPACE}%{NUMBER:response_time:float}" }
   }
 }
 
