--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -5,9 +5,14 @@ input {
 }
 
 filter {
-  grok {
-    match => { "message" => "%{IP:source_ip}%{SPACE}%{HTTPDATE:date}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_extension}%{SPACE}HTTP/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:request_size:int}%{SPACE}(%{URI:http_uri}|-)%{SPACE}%{QS:user_agent}%{SPACE}%{NUMBER:response_time:float}" }
+
+  if [fields][componentName] == "frontend" {
+      grok {
+        match => { "message" => "%{IP:source_ip}%{SPACE}%{HTTPDATE:date}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_extension}%{SPACE}HTTP/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:request_size:int}%{SPACE}(%{URI:http_uri}|-)%{SPACE}%{QS:user_agent}%{SPACE}%{NUMBER:response_time:float}" }
+      }
   }
+
+  
 }
 
 output {
