--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -13,3 +13,13 @@
     state: restarted
     enabled: yes
 
+- name: Setup Prometheus Node Exporter
+  import_role:
+    name: prometheus
+    tasks_from: nodeexporter.yml
+
+- name: Setup Filebeat
+  import_role:
+    name: elk
+    tasks_from: filebeat.yml
+
