--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -12,6 +12,12 @@ filter {
       }
   }
 
+  if [fields][componentName] == "payment" {
+        grok {
+          match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:log_level}%{SPACE}in%{SPACE}%{WORD:component}:%{SPACE}%{GREEDYDATA:msg}" }
+        }
+    }
+
 
 }
 
