--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -18,6 +18,11 @@ filter {
         }
     }
 
+  if [fields][componentName] == "shipping" {
+    grok {
+      match => { "message" => "%{TIMESTAMP_ISO8601}%{SPACE}%{WORD:log_level}%{SPACE}%{NUMBER:pid}%{SPACE}---%{SPACE}\[%{DATA:thread_name}\]%{SPACE}%{GREEDYDATA:class_name}%{SPACE}:%{SPACE}%{GREEDYDATA:msg}" }
+    }
+  }
 
 }
 
