--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -30,7 +30,7 @@ filter {
     }
   }
 
-  if [message] == "*ELB-HealthChecker*" or http_extension{
+  if [message] =~ "*ELB-HealthChecker*" or http_extension =~ "//api/ratings*" {
     drop {}
   }
 
