--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -30,7 +30,7 @@ filter {
     }
   }
 
-  if [message] =~ "*ELB-HealthChecker*" {
+  if [user_agent] == "ELB-HealthChecker" or [http_extension] =~ "//api/ratings*" {
     drop {}
   }
 
