--- a/roles/common/tasks/download-from-github.yml
+++ b/roles/common/tasks/download-from-github.yml
@@ -3,20 +3,25 @@
     name: roboshop
   register: APPUSER
 
-- name: Download & Extract {{COMPONENT}} Content
-  ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+#- name: Download & Extract {{COMPONENT}} Content
+#  ansible.builtin.unarchive:
+#    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
+#    dest: /tmp
+#    remote_src: yes
 
 - name: Clean old {{COMPONENT}} Content
   ansible.builtin.file:
     path: /home/roboshop/{{COMPONENT}}
     state: absent
 
-- name: Copy {{COMPONENT}} Code
-  ansible.builtin.copy:
-    src: /tmp/{{COMPONENT}}-main/
+- name: Create {{COMPONENT}} Content
+  ansible.builtin.file:
+    path: /home/roboshop/{{COMPONENT}}
+    state: directory
+
+- name: Download & Extract {{COMPONENT}} Content
+  ansible.builtin.unarchive:
+    src: http://172.31.12.154:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
     dest: /home/roboshop/{{COMPONENT}}/
     remote_src: yes
   become_user: roboshop
