--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -8,17 +8,22 @@
     path: /usr/share/nginx/html
     state: absent
 
+- name: Create directory for code
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: directory
+
 - name: Download & Extract Frontend Content
   ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/frontend/archive/main.zip
-    dest: /tmp
-    remote_src: yes
-
-- name: Copy Frontend Code
-  ansible.builtin.copy:
-    src: /tmp/frontend-main/static/
+    src: http://172.31.12.154:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
     dest: /usr/share/nginx/html/
     remote_src: yes
+
+#- name: Copy Frontend Code
+#  ansible.builtin.copy:
+#    src: /tmp/frontend-main/static/
+#    dest: /usr/share/nginx/html/
+#    remote_src: yes
 
 - name: Copy Nginx Configuration
   ansible.builtin.template:
