--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -9,10 +9,10 @@
     name: common
     tasks_from: download-from-github
 
-- name: Compile Java code
-  ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
-  args:
-      chdir: /home/roboshop/{{COMPONENT}}
+#- name: Compile Java code
+#  ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
+#  args:
+#      chdir: /home/roboshop/{{COMPONENT}}
 
 - name: SystemD Setup
   import_role:
