--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -39,6 +39,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[fields][componentName]}-%{[fields][environment]}-%{+YYYY.MM.dd}"
+    #index => "%{[fields][componentName]}-%{[fields][environment]}-%{+YYYY.MM.dd}"
+    index => "%{[kubernetes][container][name]}-prod-%{+YYYY.MM.dd}"
   }
 }
